# AI-Human

./: .gitignore  README.md  S3-4_原文.txt  S5-2_原文.txt  pyproject.toml  requirements.txt
classroom_ai/embedding/: base.py  factory.py  hashing.py  ollama.py  openai_compatible.py
classroom_ai/evaluation/: parser.py  prompts.py  rubrics.py
classroom_ai/llm/: base.py  factory.py  mock_local.py  ollama.py  openai_compatible.py
classroom_ai/pipeline/: core_validation.py  debate_orchestrator.py  micro_intervention.py
classroom_ai/schemas/: evidence.py  slice.py  transcript.py
classroom_ai/slicing/: phase_slicer.py  time_slicer.py
classroom_ai/uncertainty/: decision.py  entropy.py  semantic_entropy.py
configs/: api_template.yaml  cloud_api.yaml  local_cluster.yaml  local_mock.yaml  local_mock_ensemble.yaml  local_ollama.yaml  local_ollama_ensemble.yaml  local_ollama_ensemble_light.yaml  local_ollama_ensemble_mvp.yaml  local_ollama_ensemble_safe.yaml  local_ollama_titan6_ensemble.yaml
data/sample/: S3-4.json  S5-2.json  S5-2_full.json  lesson_001.json
notebooks/: 01_core_validation_demo.ipynb
scripts/: auto_generate_stage2_feedback.py  build_human_review_diagnostic.py  convert_s3-4.py  convert_transcript.py  enhance_report.py  run_core_validation.py  step1_auto_evaluate.py  step2_human_review_app.py  step3_resolve_and_report.py  test_s3-4.py  test_transcript.py
tests/: test_core_validation.py
