[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-ai-core"
version = "0.1.0"
description = "Notebook-level classroom AI uncertainty validation prototype"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["classroom_ai*"]
